--- a/springboot-aws-s3-file-upload_test/src/main/resources/application.properties
+++ b/springboot-aws-s3-file-upload_test/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-cloud.aws.credentials.access-key=YOUR_ACCESS_KEY
-cloud.aws.credentials.secret-key=YOUR_SECRET_KEY
-cloud.aws.region.static=us-east-1
+cloud.aws.credentials.access-key=
+cloud.aws.credentials.secret-key=
+cloud.aws.region.static=ap-south-1
 cloud.aws.stack.auto=false
 
 spring.servlet.multipart.max-file-size=100MB
